[package]
name = "DockerImageTarDownloadTool"
version = "1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"], default-features = false }
serde_json = "1.0"
flate2 = "1.0"
tar = "0.4"
sha2 = "0.10"
futures-util = "0.3"
